# wakuwaku

./: CMakeLists.txt  CMakePresets.json  main.cpp  wakuwaku.cpp  wakuwaku.h
cef/: Doxyfile  MODULE.bazel  README.txt
cef/Resources/: chrome_100_percent.pak  chrome_200_percent.pak
cef/bazel/: variables.bzl
cef/include/: cef_api_versions.h  cef_command_ids.h  cef_pack_resources.h  cef_pack_strings.h  cef_version.h
cef/libcef_dll/: CMakeLists.txt
cef/tests/ceftests/: BUILD.bazel  CMakeLists.txt
src/: HTTPClient.cpp  HTTPClient.h  MinimalApp.cpp  MinimalApp.h  MinimalClient.cpp  MinimalClient.h  ScrapedData.h
src/handlers/: LifeSpanHandler.cpp  LifeSpanHandler.h  LoadHandler.cpp  LoadHandler.h  TextVisitor.cpp  TextVisitor.h
